# semantic-memory

./: .gitignore  CONTRIBUTING.md  README.md  SKILL.md  _terminal_preview.html  api_examples.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile  README.md
references/: architecture.md  commands.md
scripts/: api_server.py  batch.py  config.py  core.py  doc_parser.py  installer.py  interactive.py  logging.py  memory_manager.py  retry.py  run.py  sensitive_filter.py  streamlit_app.py  vector_store.py
shell/: semantic-memory.bash  semantic-memory.fish  semantic-memory.zsh
tests/: conftest.py  test_config.py  test_core.py  test_doc_parser.py  test_memory_manager.py  test_sensitive_filter.py  test_vector_store.py
